<resources>
    <!--Main Activity-->
    <string name="app_name">BOMA! BMI Calculator</string>
    <string name="splash_title">BOMA!</string>
    <string name="save_string">BOMA_Save_Data</string>
    <string name="welcome">Welcome to BOMA!</string>
    <string name="info_input">Click to Insert Info</string>
    <string name="new_profile_prompt">
        <br>If you are new, tap below\n</br>
        to start your profile.
    </string>
    <string name="experienced">
        <br>Used BOMA! before?\n</br>
        Tap below to view your BMI Profile.
    </string>
    <string name="experienced_button">Click to View Info</string>

    <!--Welcome Back! Activity-->
    <string name="welcome_back">Welcome Back!</string>
    <string name="profile_prompt">Please select the profile name you wish to view.</string>
    <string name="update_profile_button">
        <br>To update a profile, select the\n</br>
        profile name, then tap below.
    </string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_prompt_1">
        <br>To delete an old or unwanted profile,\n</br>
        select the profile name, then tap below.
    </string>
    <string name="delete_profile_button">Delete Profile</string>

    <!--Save New Info and Update Info Activities-->
    <string name="new_explanation">Let\'s begin by setting up your profile…</string>
    <string-array name="gender_array">
        <item>(Select a Gender)</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="update_profile_title">Alright, let\'s update your profile…</string>
    <string name="save_profile">Save Profile and Calculate BMI</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="bmi_display">BMI</string>
    <string name="pounds">lbs.</string>
    <string name="error_name">* Name cannot be blank.</string>
    <string name="error_gender">* Please select a gender.</string>
    <string name="error_number">* Please enter a valid number.</string>
    <string name="error_weight">* Please enter a valid weight.</string>
    <string name="error_age">* Please enter a valid age.</string>
    <string name="error_profile">* Profile name already in use.</string>
    <string name="save_bmi">Save BMI</string>
    <string name="hint_profile_name">Profile Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_inches">Inches</string>
    <string name="hint_feet">Feet</string>

    <!--BMI Results Activity-->
    <string name="dial_underweight">Underweight</string>
    <string name="dial_normal">Normal</string>
    <string name="dial_overweight">Overweight</string>
    <string name="dial_obese">Obese</string>
    <string name="dial_morbidly_obese">Morbidly Obese</string>
    <string name="bmi_results">Your BMI Index is:</string>
    <string name="view_profile_prompt">Tap below to view your profile</string>
    <string name="view_profile">View Profile</string>
    <string name="view_progress">View Progress</string>
    <string name="main_screen_prompt">
        <br>Tap below to return\n</br>
        to main screen.
    </string>
    <string name="additional_info_prompt">
        <br>To learn more about\n</br>
        BMI indices, tap below.
    </string>
    <string name="progress_prompt">
        <br>To view your BMI Progress,\n</br>
        tap View Progress below.
    </string>
    <string name="additional_info_button">More Info</string>
    <string name="home">Home</string>

    <!--BMI Chart and Tips Activity-->
    <string name="bmi_chart">BMI Chart</string>
    <string name="reference_title">BMI Reference Chart and Improvement Tips</string>
    <string name="bmi_description">
        A person\'s Body Mass Index (BMI) is calculated based on their height and weight,
        and can help determine which weight category an individual may fall under.
    </string>
    <string name="underweight">
        <br>Children (2-19): Below the 5th Percentile.\n</br> Adults: Underweight Category.
    </string>
    <string name="normal_weight">
        <br>Children (2-19): 5th - 85th Percentiles.\n</br> Adults: Normal Weight Category.
    </string>
    <string name="overweight">
        <br>Children (2-19): 85th - 95th Percentiles.\n</br> Adults: Overweight Category.
    </string>
    <string name="obese">
        <br>Children (2-19): Within or above the 95th Percentile.\n</br> Adults: Obese Category.
    </string>
    <string name="m_obese">
         Adults: Morbidly or Extreme Obese category.
    </string>

    <!-- Recommendations -->
    <string name="suggestion_title">BMI Improvement Tip:</string>
    <string-array name="improvement_suggestions">
        <item>try to check in with yourself, do you feel healthy.</item>
        <item>Walk 15 minutes a day.</item>
        <item>Eat ample fruits and vegetables with your meals.</item>
        <item>Making sure you eat a balanced meal.</item>
        <item>Stretch for 10 minutes each hour.</item>
        <item>Do 10 push-ups, 10 squats, and 10 sit-ups before the day\'s end.</item>
        <item>Drinking water</item>
        <item>Jogging for 10 minutes</item>
        <item>Learning to do a front flip</item>
        <item>Checking with a dietitian</item>
        <item>Doing 10 push ups</item>
        <item>getting a physical from a doctor</item>
        <item>Research &amp; hire a personal trainer</item>
        <item>Pokemon Go</item>
        <item>Becoming a walking postman</item>
        <item>finding encouraging ways to exercise</item>
        <item>Jumping-Jacks for 10 minutes</item>
        <item>Push ups for 10 minutes</item>
        <item>Finding a sport you enjoy doing</item>
        <item>Plotting revenge by getting buff</item>
        <item>taking your pet for a walk twice a day</item>
        <item>Participating in a local charity marathon</item>
        <item>Engaging in politics, specifically with someone against you</item>
        <item>Going on a mission</item>
        <item>Not ordering from that fast food place… you know the one</item>
        <item>Jogging for 10 minutes</item>
    </string-array>

    <!--quote-->
    <string-array name="quotes">
        <item>
            <br>\"Success is not final,\n</br>
            <br>failure is not fatal:\n</br>
            <br>it is the courage\n</br>
            <br>to continue that counts.\"\n</br>
            - Winston Churchill
        </item>
        <item>
            <br>\"Never bend your head.\n</br>
            <br>Always hold it high.\n</br>
            <br>Look the world\n</br>
            <br>straight in the eye.\"\n</br>
            - Helen Keller
        </item>
        <item>
            <br>\"Believe you can and\n</br>
            <br>you\'re halfway there.\"\n</br>
            - Theodore Roosevelt
        </item>
        <item>
            <br>\"Life is like riding a bicycle.\n</br>
            <br>To keep your balance,\n</br>
            <br>you must keep moving.\"\n</br>
            - Albert Einstein
        </item>
        <item>
            <br>\"Nothing is impossible.\n</br>
            <br>The word itself says\n</br>
            <br>I\'m possible.\"\n</br>
            - Audrey Hepburn
        </item>
        <item>
            <br>\"You are never too old\n</br>
            <br>to set another goal or\n</br>
            <br>to dream a new dream.\"\n</br>
            - C.S. Lewis
        </item>
        <item>
            <br>\"Sometimes you will never know\n</br>
            <br>the value of a moment,\n</br>
            <br>until it becomes a memory.\"\n</br>
            - Dr. Seuss
        </item>
        <item>
            <br>\"You must do the things\n</br>
            <br>you think you cannot do.\"\n</br>
            - Eleanor Roosevelt
        </item>
        <item>
            <br>\"Be the change that you\n</br>
            <br>wish to see in the world.\"\n</br>
            - Mahatma Gandhi
        </item>
        <item>
            <br>\"Let us make our Future now,\n</br>
            <br>and let us make our dreams\n</br>
            <br>tomorrow\'s reality.\"\n</br>
            - Malala Yousafzai
        </item>
        <item>
            <br>\"If I cannot do great things,\n</br>
            <br>I can do small things\n</br>
            <br>in a great way.\"\n</br>
            - Martin Luther King Jr.
        </item>
        <item>
            <br>\"Spread love\n</br>
            <br>everywhere you go.\"\n</br>
            - Mother Teresa
        </item>
        <item>
            <br>\"The best way to get started\n</br>
            <br>is to quit talking\n</br>
            <br>and begin doing.\"\n</br>
            - Walt Disney
        </item>
        <item>
            <br>\"The only limit to our\n</br>
            <br>realization of tomorrow\n</br>
            <br>will be our doubts of today.\"\n</br>
            - Franklin D. Roosevelt
        </item>
        <item>
            <br>\"Memories of our lives,\n</br>
            <br>of our works and our deeds\n</br>
            <br>will continue in others.\"\n</br>
            - Rosa Parks
        </item>
        <item>
            <br>\"How wonderful it is that\n</br>
            <br>nobody need wait a single\n</br>
            <br>moment before starting\n</br>
            <br>to improve the world.\"\n</br>
            - Anne Frank
        </item>
        <item>
            <br>\"The best way to cheer\n</br>
            <br>yourself up is to try to\n</br>
            <br>cheer somebody else up.\"\n</br>
            - Mark Twain
        </item>
        <item>
            <br>\"It is better to offer\n</br>
            <br>no excuse then\n</br>
            <br>a bad one.\"\n</br>
            - George Washington
        </item>
    </string-array>


</resources>